Added Get and Create Sessions

--- a/SessionMan.Api/SessionMan.Api.csproj
+++ b/SessionMan.Api/SessionMan.Api.csproj
@@ -29,6 +29,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\SessionMan.DataAccess\SessionMan.DataAccess.csproj" />
+      <ProjectReference Include="..\SessionMan.Shared\SessionMan.Shared.csproj" />
     </ItemGroup>
 
 </Project>
